--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,9 +5,9 @@ spring.application.name=apihorariomed
 server.port=8080
 
 # AIVEN MySQL - parcial_db
-spring.datasource.url=jdbc:mysql://pedidos-servidor-db.l.aivencloud.com:24763/parcial_db?ssl-mode=REQUIRED
-spring.datasource.username=avnadmin
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?ssl-mode=REQUIRED
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate
